care-australia-uat/force-app/main/default/objects/Upgrades__c/Upgrades__c.object-meta.xml
<CustomObject>
    <label>Upgrades</label>
    <nameField>
        <label>Upgrades</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upgrades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>