care-australia-uat/force-app/main/default/objects/Upgrades__c/fields/AvgSuccessRate__c.field-meta.xml
<CustomField>
    <fullName>AvgSuccessRate__c</fullName>
    <label>AvgSuccessRate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>