care-australia-uat/force-app/main/default/objects/Upgrades__c/fields/CampaignSuccessRate__c.field-meta.xml
<CustomField>
    <fullName>CampaignSuccessRate__c</fullName>
    <label>CampaignSuccessRate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>