care-australia-uat/force-app/main/default/objects/Upgrades__c/fields/Dataro__c.field-meta.xml
<CustomField>
    <fullName>Dataro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dataro</label>
    <type>Checkbox</type>
</CustomField>