care-australia-uat/force-app/main/default/objects/Upgrades__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End.Date</label>
    <type>Date</type>
</CustomField>