care-australia-uat/force-app/main/default/objects/Upgrades__c/fields/TotalSent__c.field-meta.xml
<CustomField>
    <fullName>TotalSent__c</fullName>
    <label>TotalSent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>