care-australia-uat/force-app/main/default/objects/Upgrades__c/fields/TotalUpgrade__c.field-meta.xml
<CustomField>
    <fullName>TotalUpgrade__c</fullName>
    <label>TotalUpgrade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>